<resources>
    <string name="about_text">&lt;b>VK for Android&lt;/b>&lt;br/>&lt;small>Version %1$s (build %2$d)&lt;/small>&lt;br/>&lt;br/>&lt;small>Modded by Dmitry Tretyakov for &lt;a href=&quot;https://openvk.org&quot;>OpenVK fan project&lt;/a>. Not affiliated with VK LLC.&lt;/small></string>
    <string name="access_error">Access error</string>
    <string name="add">Add</string>
    <string name="add_comment_hint">Your comment</string>
    <string name="add_doc_file">Pick a file</string>
    <string name="add_doc_list">My documents</string>
    <string name="add_doc_photo">Pick from gallery</string>
    <string name="add_doc_title">Add a document</string>
    <string name="add_friend_accepted">Request accepted</string>
    <string name="add_friend_already_sent">The request has already been sent.</string>
    <string name="add_friend_blacklisted_f">"You've added %s to your blacklist. To continue you need to unblock her."</string>
    <string name="add_friend_blacklisted_m">"You've added %s to your blacklist. To continue you need to unblock him."</string>
    <string name="add_friend_blacklisted_me_f">"You can't send %s a friend request because you are in her blacklist."</string>
    <string name="add_friend_blacklisted_me_m">"You can't send %s a friend request because you are in his blacklist."</string>
    <string name="add_friend_explain_f">Do you want to add %s as a friend?</string>
    <string name="add_friend_explain_m">Do you want to add %s as a friend?</string>
    <string name="add_friend_msg">Add a message</string>
    <string name="add_friend_notify">wants to add you as a friend</string>
    <string name="add_friend_sent_f">%s received your friendship request and will confirm that you are a friend.</string>
    <string name="add_friend_sent_m">%s received your friendship request and will confirm that you are a friend.</string>
    <string name="add_photo_camera">Take a picture</string>
    <string name="add_photo_from_album">Choose from album</string>
    <string name="add_photo_gallery">Choose from Gallery</string>
    <string name="add_place">Add a place</string>
    <string name="add_shortcut_title">Add a shortcut</string>
    <string name="add_video">Add a video</string>
    <string name="add_video_existing">Choose from existing</string>
    <string name="add_video_new">Record a video</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="age_from">from %d</string>
    <string name="age_to">to %d</string>
    <string name="album_cover_changed">Album cover changed</string>
    <string name="album_unnamed">Unnamed</string>
    <string name="albums">Albums</string>
    <string name="all_photos">All photos</string>
    <string name="all_videos">All videos</string>
    <string name="already_logged_in">You already have a VK account on this device. If you wish to log in with another account, log out from the current one first.</string>
    <string name="app_name">VK</string>
    <string name="article_go_to_group">Go to %s community</string>
    <string name="article_go_to_profile">"Go to %s's page"</string>
    <string name="article_preview">Page preview:</string>
    <string name="article_source">Source:</string>
    <string name="attach">Add</string>
    <string name="attach_link">Link</string>
    <string name="attach_note">Note</string>
    <string name="attach_photo">Photo</string>
    <string name="attach_place">Attach place</string>
    <string name="attach_poll">Poll</string>
    <string name="attach_wall_post">Wall post</string>
    <string name="attach_wiki">Page</string>
    <string name="attachment">Attachment</string>
    <string name="attachments_limit">You can add no more than %d attachments.</string>
    <string name="audio">Audio file</string>
    <string name="audio_add_error">Error adding audio file</string>
    <string name="audio_added">The audio file has been added to your page</string>
    <string name="audio_added_to_queue">Enqueued</string>
    <string name="audio_broadcast">Broadcast music</string>
    <string name="audio_deleted">The audio file has been removed from your page</string>
    <string name="audio_lyrics">Lyrics</string>
    <string name="audio_play_error">A playback error has occurred.</string>
    <string name="audio_saved">Saved</string>
    <string name="audio_search_artist">Search artist</string>
    <string name="audio_upload_ok">Uploaded an audio file</string>
    <string name="audio_upload_ok_long">Audio file uploaded successfully</string>
    <string name="audio_widget_inactive">Tap to open your music</string>
    <string name="auth">Authorization</string>
    <string name="auth_error">An error occurred while trying to log in. Please check your login and password and try again.</string>
    <string name="auth_error_network">Unable to log in due to problems with a network. Please check your connection and try again.</string>
    <string name="auth_error_title">Error logging in</string>
    <string name="back">Back</string>
    <string name="birthday_today">"Today is %s's birthday."</string>
    <string name="birthday_today_short">"%s's birthday"</string>
    <string name="birthday_tomorrow">"Tomorrow is %s's birthday."</string>
    <string name="birthdays_title">Birthdays</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_summary">Users in this list are disallowed to view your page and send you messages.</string>
    <string name="block_user">Block</string>
    <string name="board_comment_sent">Your comment has been sent</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="buy_stickers">Stickers store</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_request">Cancel</string>
    <string name="captcha_hint">Please enter the code from the picture</string>
    <string name="caption">Caption</string>
    <string name="change_password">Change password</string>
    <string name="change_status">Change status</string>
    <string name="chat_add_member">Add a participant</string>
    <string name="chat_add_shortcut">Add a shortcut for chat</string>
    <string name="chat_admin">Started this conversation</string>
    <string name="chat_dnd">Do not disturb</string>
    <string name="chat_invite_error_already_in">This user is already a participant of this chat.</string>
    <string name="chat_invite_error_left">"You can't invite this user because they left this chat."</string>
    <string name="chat_leave">Leave this chat</string>
    <string name="chat_leave_confirm">Are you sure you want to leave this conversation?</string>
    <string name="chat_members">Participants</string>
    <string name="chat_photo_removed_f">%s deleted chat photo</string>
    <string name="chat_photo_removed_m">%s deleted chat photo</string>
    <string name="chat_photo_updated_f">%s updated chat photo</string>
    <string name="chat_photo_updated_m">%s updated chat photo</string>
    <string name="chat_sound">Sound</string>
    <string name="chat_title">Chat title</string>
    <string name="chat_title_change_ok">Chat title changed successfully</string>
    <string name="chat_typing">%s is typing...</string>
    <string name="chat_typing_multiple">%s are typing...</string>
    <string name="copy_link">Copy link</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_choose_city">Choose a city</string>
    <string name="enable">Enable</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="gender">Gender</string>
    <string name="gender_any">Any</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="mail_or_login">E-mail or login</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Quit</string>
    <string name="menu_settings">Settings</string>
    <string name="password">Password</string>
    <string name="picker_attach">Attach</string>
    <string name="profile_relation">Relationship status</string>
    <string name="publish_now">Publish now</string>
    <string name="region">Region</string>
    <string name="report_content">Report</string>
    <string name="save">Save</string>
    <string name="sett_account">Your account</string>
    <string name="sett_advanced">Advanced settings</string>
    <string name="sett_alt_video_output">Alternative video output</string>
    <string name="sett_alt_video_output_summary">Enable this if you see black screen instead of video</string>
    <string name="sett_app_restart_required">Application restart is required for this setting to take effect</string>
    <string name="sett_audio_cache">Music cache</string>
    <string name="sett_bdays">Birthday notifications</string>
    <string name="sett_big_images_mobile">Big photos on mobile network</string>
    <string name="sett_big_images_mobile_summary">Load big photos in posts when using 3G</string>
    <string name="sett_cache">Image cache</string>
    <string name="sett_clear_audio_cache">Clear</string>
    <string name="sett_clear_img_cache">Clear image cache</string>
    <string name="sett_compress_photos">Compress photos on upload</string>
    <string name="sett_dnd_cancel">Enable notifications</string>
    <string name="sett_flist_sort">Friend list order</string>
    <string name="sett_force_tablet_ui">Tablet UI</string>
    <string name="sett_general">General</string>
    <string name="sett_https">Secure connection</string>
    <string name="sett_https_summary">Use HTTPS protocol</string>
    <string name="sett_news_banned">News filter</string>
    <string name="sett_news_banned_summary">Edit people &amp; communities that are hidden from the news feed</string>
    <string name="sett_notifications">Notifications</string>
    <string name="sett_notify_led">Blinking LED</string>
    <string name="sett_notify_sound">Sound</string>
    <string name="sett_notify_types">Notification types</string>
    <string name="sett_notify_vibrate">Vibration</string>
    <string name="sett_other">Others</string>
    <string name="sett_safe_search">Safe search</string>
    <string name="sett_safe_search_summary">Hides reported adult videos in your search results</string>
    <string name="sett_send_by_enter">Send messages using Enter</string>
    <string name="sett_send_by_enter_summary">With hardware keyboard only</string>
    <string name="sett_sync">Contacts sync</string>
    <string name="sett_update_on_open">Refresh on open</string>
    <string name="sett_update_on_open_summary">Refresh the news feed when you open application</string>
    <string name="show_original_post">Show original post</string>
    <string name="signup_code_call_btn">Yes, let it call</string>
    <string name="signup_code_call_sent">Robot calls...</string>
    <string name="signup_code_explain">"In a few seconds you'll receive an SMS with an activation code to your number:"</string>
    <string name="signup_code_hint">Enter a confirmation code</string>
    <string name="signup_code_waiting">Waiting for code confirmation:</string>
    <string name="signup_confirm">Confirm</string>
    <string name="signup_female">Female</string>
    <string name="signup_first_name">Your first name</string>
    <string name="signup_last_name">Your last name</string>
    <string name="signup_male">Male</string>
    <string name="signup_pass_explain">In order to complete registration please create a password.</string>
    <string name="signup_pass_hint">Enter password</string>
    <string name="signup_photo">Choose a photo</string>
    <string name="signup_profile_explain">Fill in your personal information so your friends will be able to find you:</string>
    <string name="signup_profile_select_gender">Choose your gender:</string>
    <string name="welcome_next">Next</string>
    <string name="sett_network_prefs">Network settings</string>
</resources>