<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_ab_attach" android:id="@id/attach" android:title="@string/picker_attach" android:showAsAction="always" />
    <item android:icon="@android:drawable/ic_menu_edit" android:id="@id/edit" android:title="@string/edit" />
    <item android:id="@id/publish_now" android:title="@string/publish_now" />
    <item android:icon="@android:drawable/ic_menu_delete" android:id="@id/delete" android:title="@string/delete" />
    <item android:id="@id/show_original_post" android:title="@string/show_original_post" />
    <item android:id="@id/copy_link" android:title="@string/copy_link" />
    <item android:id="@id/report" android:title="@string/report_content" />
</menu>