<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/cards_bg" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:id="@id/auth_login" android:background="@drawable/bg_post_comments_top" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/mail_or_login" android:inputType="textEmailAddress" style="@style/CardTextEdit">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/auth_pass" android:background="@drawable/bg_post_comments_btm" android:paddingTop="10.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="54.0dip" android:hint="@string/password" android:inputType="textPassword" style="@style/CardTextEdit" />
        <Button android:textSize="16.0dip" android:textColor="@color/blue_btn_text" android:id="@id/auth_btn" android:background="@drawable/btn_register_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="8.0dip" android:text="@string/log_in" />
        <TextView android:textSize="17.0dip" android:textColor="#ff818891" android:gravity="center" android:id="@id/auth_forgot" android:background="@drawable/highlight" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/forgot_pass" />
        <TextView android:textSize="17.0dip" android:textColor="#ff818891" android:gravity="center" android:id="@+id/auth_network_settings" android:background="@drawable/highlight" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/sett_network_prefs" />
    </LinearLayout>
</ScrollView>