<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/region" style="@style/CardsSectionHeader" />
        <LinearLayout android:id="@id/region_wrap" android:paddingLeft="12.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Spinner android:id="@id/country_spinner" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0" style="@style/HoloSpinnerStyle" />
            <Button android:enabled="false" android:textSize="16.0dip" android:gravity="center|left" android:id="@id/city_btn" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginRight="4.0dip" android:text="@string/edit_choose_city" android:singleLine="true" android:layout_weight="1.0" style="@style/HoloSpinnerStyle" />
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gender" style="@style/CardsSectionHeader" />
        <LinearLayout android:id="@id/gender_wrap" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0dip" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/gender_any" android:background="@drawable/highlight" android:paddingLeft="7.0dip" android:paddingTop="7.0dip" android:paddingRight="7.0dip" android:paddingBottom="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/gender_any" android:singleLine="true" android:drawableLeft="@drawable/register_radio" android:drawablePadding="5.0dip" />
            <TextView android:textSize="17.0dip" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/gender_male" android:background="@drawable/highlight" android:paddingLeft="7.0dip" android:paddingTop="7.0dip" android:paddingRight="7.0dip" android:paddingBottom="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/signup_male" android:singleLine="true" android:drawableLeft="@drawable/register_radio" android:drawablePadding="5.0dip" />
            <TextView android:textSize="17.0dip" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/gender_female" android:background="@drawable/highlight" android:paddingLeft="7.0dip" android:paddingTop="7.0dip" android:paddingRight="7.0dip" android:paddingBottom="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/signup_female" android:singleLine="true" android:drawableLeft="@drawable/register_radio" android:drawablePadding="5.0dip" />
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/age" style="@style/CardsSectionHeader" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Spinner android:id="@id/age_from" android:layout_width="wrap_content" android:layout_height="36.0dip" style="@style/HoloSpinnerStyle" />
            <View android:id="@id/view1" android:background="#ffb3b3b3" android:layout_width="10.0dip" android:layout_height="1.0dip" android:layout_margin="7.0dip" />
            <Spinner android:id="@id/age_to" android:layout_width="wrap_content" android:layout_height="36.0dip" style="@style/HoloSpinnerStyle" />
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_relation" style="@style/CardsSectionHeader" />
        <Spinner android:id="@id/relation_spinner" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="12.0dip" style="@style/HoloSpinnerStyle" />
    </LinearLayout>
</ScrollView>