<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0dip" android:textColor="#ff797c80" android:id="@id/signup_code_text1" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_code_explain" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <LinearLayout android:gravity="center_vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="32.0dip">
            <TextView android:textSize="19.0dip" android:textColor="#ff000000" android:id="@id/signup_code_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="TextView" android:layout_weight="1.0" />
            <View android:id="@id/view1" android:background="#ffcacbcc" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <ImageView android:id="@id/signup_code_edit_btn" android:background="@drawable/highlight" android:paddingLeft="11.0dip" android:paddingRight="11.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_edit" />
        </LinearLayout>
        <TextView android:textSize="16.0dip" android:textColor="#ff797c80" android:id="@id/signup_code_text2" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_code_waiting" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <TextView android:textSize="18.0dip" android:textStyle="italic" android:textColor="@color/btn_link" android:layout_gravity="center_horizontal" android:id="@id/signup_code_call_btn" android:background="@drawable/bg_btn_link" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingRight="10.0dip" android:paddingBottom="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signup_code_call_btn" />
        <TextView android:textSize="18.0dip" android:textColor="#ff818891" android:gravity="center" android:id="@id/signup_code_call_sent" android:padding="3.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/signup_code_call_sent" />
        <EditText android:gravity="center" android:id="@id/signup_code_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/signup_code_hint" android:inputType="textFilter" style="@style/CardTextEdit" />
        <Button android:textSize="16.0dip" android:textColor="@color/blue_btn_text" android:id="@id/signup_btn_next" android:background="@drawable/btn_register_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:text="@string/signup_confirm" />
    </LinearLayout>
</ScrollView>