<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0dip" android:textColor="#ff797c80" android:id="@id/signup_profile_text1" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_profile_explain" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/signup_photo_wrap" android:background="@drawable/bg_post" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/signup_photo" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="97.0dip" android:layout_height="97.0dip" android:scaleType="centerCrop" />
                <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ffb8b8b8" android:gravity="center" android:layout_gravity="center" android:id="@id/signup_photo_holder" android:padding="10.0dip" android:layout_width="97.0dip" android:layout_height="wrap_content" android:text="@string/signup_photo" android:textAllCaps="true" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_post" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="-7.0dip" android:layout_weight="1.0">
                <EditText android:id="@id/signup_first_name" android:background="@null" android:paddingLeft="10.0dip" android:paddingTop="0.0dip" android:paddingRight="10.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:hint="@string/signup_first_name" android:maxLength="50" android:inputType="textPersonName|textCapWords" style="@style/CardTextEdit" />
                <View android:id="@id/view1" android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
                <EditText android:id="@id/signup_last_name" android:background="@null" android:paddingLeft="10.0dip" android:paddingTop="0.0dip" android:paddingRight="10.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:hint="@string/signup_last_name" android:maxLength="50" android:inputType="textPersonName|textCapWords" style="@style/CardTextEdit" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="16.0dip" android:textColor="#ff797c80" android:id="@id/signup_profile_text2" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/signup_profile_select_gender" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <LinearLayout android:background="@drawable/bg_post" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0dip" android:gravity="center_vertical" android:id="@id/signup_gender_male" android:background="@drawable/highlight" android:paddingLeft="13.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/signup_male" android:drawableLeft="@drawable/register_radio" android:drawablePadding="10.0dip" android:layout_weight="1.0" />
            <View android:id="@id/view2" android:background="#ffe5e5e5" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <TextView android:textSize="18.0dip" android:gravity="center_vertical" android:id="@id/signup_gender_female" android:background="@drawable/highlight" android:paddingLeft="13.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/signup_female" android:drawableLeft="@drawable/register_radio" android:drawablePadding="10.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <Button android:textSize="16.0dip" android:textColor="@color/blue_btn_text" android:id="@id/signup_btn_next" android:background="@drawable/btn_register_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:text="@string/welcome_next" />
    </LinearLayout>
</ScrollView>