<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0dip" android:textColor="#ff797c80" android:id="@id/signup_pass_text" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_pass_explain" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <EditText android:id="@id/signup_pass_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/signup_pass_hint" android:inputType="textFilter" style="@style/CardTextEdit" />
        <Button android:textSize="16.0dip" android:textColor="@color/blue_btn_text" android:id="@id/signup_btn_next" android:background="@drawable/btn_register_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:text="@string/done" />
    </LinearLayout>
</ScrollView>